remove cron-lcok
