# aua-app/src/_assets/api.yml
@@ -565,12 +565,6 @@ paths:
       responses:
         200:
           description: OK
-  /recurring/healthcheck:
-    get:
-      operationId: healthCheckRecurring
-      responses:
-        200:
-          description: OK
   /recurring/:id:
     get:
       operationId: getRecurring
